use docker mongo image
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -1,8 +1,12 @@
+mongo:
+  image: mongo
 libreboard:
   image: miurahr/libreboard
   environments:
     - VIRTUAL_HOST=example.com
-    - MONGO_URL=mongodb://dbserver:27017/libreboard
+    - MONGO_URL=mongodb://${MONGO_PORT_27017_TCP_ADDR}:${MONGO_PORT_27017_TCP_PORT}/libreboard
     - ROOT_URL=http://example.com
+  links:
+    - mongo:mongo
   ports:
     - 5555:5555
