place log directory in the tree
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -8,6 +8,6 @@ libreboard:
   links:
     - mongo:mongo
   volumes:
-    - /tmp/libreboard-logs:/home/app/logs
+    - logs:/home/app/logs
   ports:
     - 5555:5555
